fix(theme-default): event z-index when dragging

--- a/packages/theme-default/src/components/calendar/view-week/week-wrapper.scss
+++ b/packages/theme-default/src/components/calendar/view-week/week-wrapper.scss
@@ -13,7 +13,7 @@
 .sx__week-header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: var(--sx-color-background);
 }
 
